# simpleDoomLauncher

./: CMakeLists.txt  README.md  main.cpp  simpDoom
head/: error.h  traverser.h
src/: error.cpp  traverser.cpp
